# bout-forge

./: README.md  main.py  pyproject.toml
bout_forge/: bout_forge.py  event_manager.py  team_manager.py
bout_forge/config/: teams.json
